Updating react-practice

--- a/react-practice/src/components/Users/UsersList.module.css
+++ b/react-practice/src/components/Users/UsersList.module.css
@@ -4,6 +4,11 @@
   max-width: 40rem;
 }
 
+.users p {
+  text-align: center;
+  padding: 10px;
+}
+
 .users ul {
   list-style: none;
   padding: 1rem;
